--- a/inspec.yml
+++ b/inspec.yml
@@ -1,8 +1,8 @@
 name: webserver
 title: InSpec Profile
-maintainer: The Authors
-copyright: The Authors
-copyright_email: you@example.com
+maintainer: Varun Sharma
+copyright: Varun Sharma
+copyright_email: varunge@gmail.com
 license: Apache-2.0
 summary: An InSpec Compliance Profile
 version: 0.1.0
